--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="https://santiconti.github.io/uva1-TP1/" target="_blank">TP1</a></li>
                     <li><p><b>TP2 - esta aquí </b></p></li>
-                    <li><p>TP3 - en desarrollo...</p></li>
+                    <li><a href="https://santiconti.github.io/uva1-TP3/" target="_blank">TP3</a></li>
                 </ul>
         </section>
     </main>
